fix link color in dark mode

--- a/portfolio/static/portfolio/css/color.css
+++ b/portfolio/static/portfolio/css/color.css
@@ -32,10 +32,6 @@ div.breadcrumbs a {
   color: black;
 }
 
-a:link, a:visited {
-  color: black;
-}
-
 /*change list page tools*/
 .object-tools a:link, .object-tools a:visited {
   background-color: var(--accent-color-brown);
